# mc-server-manager

./: .env.example  .gitignore  Makefile  McServerManager.sln  README.md  pyproject.toml  pyrightconfig.json
.github/: README.md
.github/workflows/: README.md  release-windows.yml
docs/: README.md
docs/operations/: README.md
docs/product/: README.md
src/: README.md
src/McServerManager.Application/: McServerManager.Application.csproj  README.md
src/McServerManager.Desktop/: App.xaml  App.xaml.cs  McServerManager.Desktop.csproj  README.md
src/McServerManager.Domain/: README.md
src/McServerManager.Infrastructure/: McServerManager.Infrastructure.csproj  README.md
src/mc_server_manager/: README.md  __init__.py  app_icon.py  installer_main.py  main.py
tests/: README.md
tests/McServerManager.IntegrationTests/: McServerManager.IntegrationTests.csproj  README.md  SftpRepositoryIntegrationTests.cs
tests/McServerManager.UnitTests/: McServerManager.UnitTests.csproj  README.md  ServerPropertiesValidatorTests.cs  WhitelistValidatorTests.cs  WorldCatalogServiceTests.cs  WorldNameGeneratorTests.cs
tests/integration/: README.md  test_sftp_smoke.py
tests/unit/: README.md  test_app_icon.py  test_app_state_store.py  test_build_windows_release.py  test_dotenv_loader.py  test_entrypoints.py  test_installations.py  test_main_window_power_controls.py  test_mod_catalog.py  test_mod_editor_activation.py  test_provider_clients.py  test_rcon_service.py  test_releases.py  test_remote_paths.py  test_runtime_logging.py  test_sftp_connection_address.py  test_sftp_gateway.py  test_update_service.py  test_validators.py  test_world_catalog.py  test_world_name.py
tools/: README.md
tools/packaging/: README.md  (+3 more)
(+98 files in other folders)
