[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mc-server-manager"
version = "0.1.0"
description = "Tkinter app for multi-server Minecraft management with provider, SFTP, and RCON panels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.0",
    "httpx>=0.28.0",
    "mctools>=1.4.1",
    "paramiko>=3.5.0",
    "platformdirs>=4.3.0",
]

[project.scripts]
mc-server-manager = "mc_server_manager.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["src", "tests", "tools"]
exclude = [".venv", "__pycache__"]
